cluster/apps/data/kopia/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kopia
  labels:
    goldilocks.fairwinds.com/enabled: "true"
